# Leaderboard-App-for-AmalBIlm

./: .env.example  .gitignore  README.md  app.py  extensions.py  models.py  requirements.txt
backend/: README.md  __init__.py  app.py  config.py  extensions.py  models.py  pyproject.toml  requirements.txt
backend/leaderboard/: app.py  models.py
backend/leaderboard/routes/: __init__.py  admin.py  api.py  auth.py  public.py
backend/leaderboard/services/: __init__.py  scoring.py  students.py
backend/leaderboard/templates/: admin_session.html
backend/migrations/versions/: 6c4e3f0a2f1d_add_student_cohort_membership.py  97b807bfce22_create_initial_leaderboard_schema_with_.py  a4d9e2b7c6f0_add_student_cohort_memberships.py  b8d2f34a7c91_add_session_questions.py  c7b2e8d4a9f0_add_kahoot_run_position.py  d3a9f21c8e77_add_live_session_and_scoring_fields.py  f2a6c9d3e4b1_add_kahoot_runs_and_results.py
backend/routes/: admin.py  api.py  auth.py  public.py
backend/services/: scoring.py
backend/templates/: admin.html  base.html  leaderboard.html  login.html  rules.html
frontend/: README.md  THIRD_PARTY_NOTICES.md  components.tsx  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/app/: App.tsx  api.ts
frontend/src/styles/: fonts.css  theme.css
migrations/versions/: 97b807bfce22_create_initial_leaderboard_schema_with_.py
routes/: __init__.py  admin.py  auth.py  public.py
services/: __init__.py  database.py  scoring.py
static/: style.css
templates/: admin.html  admin_session.html  base.html  leaderboard.html
