[project]
name = "backend"
version = "0.1.0"
description = "AmalbIlm Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-limiter>=4.1.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
    "gunicorn>=26.0.0",
    "psycopg-binary>=3.3.4",
    "python-dotenv>=1.2.2",
]
