[project]
name = "amal-bilm-leaderboard-backend"
version = "0.1.0"
description = "Flask API for the Amal B'Ilm leaderboard app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-limiter>=4.1.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
    "gunicorn>=26.0.0",
    "psycopg-binary>=3.3.4",
    "python-dotenv>=1.2.2",
]
